--- a/Aiwe/Views/Shared/_SharedCreate.cshtml
+++ b/Aiwe/Views/Shared/_SharedCreate.cshtml
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="form-group">
       <div class="@ViewBag.LabelClasses"></div>
-      <button class="btn btn-success col-md-1" style="margin-left:12px; margin-right:8px; margin-top:15px;" onclick="submitCommonForm()"> 
+      <button class="btn btn-success col-md-1" style="margin-left:12px; margin-right:8px; margin-top:15px;"> @*onclick="submitCommonForm()"*@ 
         <span class="glyphicon glyphicon-plus"><font style="font-family:verdana;"> @Aibe.LCZ.W_Create</font></span>
       </button>
       <a href="../../../../../../@((string)ViewBag.ControllerName)/@Aibe.DH.IndexActionName"
