--- a/Aiwe/Views/MetaItem/_DetailsPart.cshtml
+++ b/Aiwe/Views/MetaItem/_DetailsPart.cshtml
@@ -166,8 +166,8 @@
   <br />
 </div>
 <div class="row">
-  <div class="@ViewBag.LabelClasses"><b>@Html.LabelFor(model => model.HistoryTrigger)</b></div>
-  <div class="@ViewBag.EditorClass">@Html.DisplayFor(model => model.HistoryTrigger)</div>
+  <div class="@ViewBag.LabelClasses"><b>@Html.LabelFor(model => model.HistoryTriggers)</b></div>
+  <div class="@ViewBag.EditorClass">@Html.DisplayFor(model => model.HistoryTriggers)</div>
   <br />
 </div>
 <div class="row">
