--- a/Aiwe/Views/Account/Login.cshtml
+++ b/Aiwe/Views/Account/Login.cshtml
@@ -13,14 +13,14 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-          @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+          <label class="col-md-2 control-label">@Aibe.LCZ.W_Email</label>
           <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
           </div>
         </div>
         <div class="form-group">
-          @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+          <label class="col-md-2 control-label">@Aibe.LCZ.W_Password</label>
           <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
