--- a/Aiwe/Views/Home/Index.cshtml
+++ b/Aiwe/Views/Home/Index.cshtml
@@ -10,28 +10,25 @@
             <span class="glyphicon glyphicon-chevron-down module-button" id="module-button-1"></span>
         </h4>
         <div id="module-1" class="module-div">
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_PRD_TYP" class="btn btn-primary btn-block button-odd-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_PRD_TYP" class="btn btn-primary btn-block button-odd-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-wrench"></span> Product Type
             </a>
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_PRD_INF" class="btn btn-primary btn-block button-even-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_PRD_INF" class="btn btn-primary btn-block button-even-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-wrench"></span> Product Information
             </a>
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_CUS_LOC" class="btn btn-primary btn-block button-odd-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_CUS_LOC" class="btn btn-primary btn-block button-odd-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-wrench"></span> Customer Location
             </a>
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_SVG_TYP" class="btn btn-primary btn-block button-even-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_SVG_TYP" class="btn btn-primary btn-block button-even-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-wrench"></span> Service Type
             </a>
-            @*  <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_SVG_ACT" class="btn btn-primary btn-block" style="margin-top:5px;margin-right:5px;">
-  <span class="glyphicon glyphicon-wrench"></span> Service Performed
-  </a>*@
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_JOB_INT" class="btn btn-primary btn-block button-odd-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_JOB_INT" class="btn btn-primary btn-block button-odd-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-wrench"></span> Job Type
             </a>
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_PUB_HOL" class="btn btn-primary btn-block button-even-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_PUB_HOL" class="btn btn-primary btn-block button-even-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-wrench"></span> Holiday Setup
             </a>
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_TRN_ACT" class="btn btn-primary btn-block button-odd-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_TRN_ACT" class="btn btn-primary btn-block button-odd-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-wrench"></span> Training Topics
             </a>
         </div>
@@ -42,16 +39,16 @@
             <span class="glyphicon glyphicon-chevron-down module-button" id="module-button-2"></span>
         </h4>
         <div id="module-2" class="module-div">
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_CUS_INF" class="btn btn-primary btn-block button-odd-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_CUS_INF" class="btn btn-primary btn-block button-odd-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-file"></span> Customer Data
             </a>
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/ORD_CUS_PRD" class="btn btn-primary btn-block button-even-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/ORD_CUS_PRD" class="btn btn-primary btn-block button-even-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-file"></span> Customer Product
             </a>
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_CUS_SUB" class="btn btn-primary btn-block button-odd-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/CFG_CUS_SUB" class="btn btn-primary btn-block button-odd-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-file"></span> Customer Sub-contractor
             </a>
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/ORD_CUS_REQ" class="btn btn-primary btn-block button-even-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/ORD_CUS_REQ" class="btn btn-primary btn-block button-even-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-file"></span> Customer Service Request
             </a>
         </div>
@@ -62,13 +59,13 @@
             <span class="glyphicon glyphicon-chevron-down module-button" id="module-button-3"></span>
         </h4>
         <div id="module-3" class="module-div">
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/JOB_ORD_INF" class="btn btn-primary btn-block button-odd-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/JOB_ORD_INF" class="btn btn-primary btn-block button-odd-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-check"></span> Work Order Schedule
             </a>
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/JOB_CAL_INF" class="btn btn-primary btn-block button-even-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/JOB_CAL_INF" class="btn btn-primary btn-block button-even-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-check"></span> Calibration Schedule
             </a>
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/JOB_TRN_INF" class="btn btn-primary btn-block button-odd-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/JOB_TRN_INF" class="btn btn-primary btn-block button-odd-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-check"></span> Training Schedule
             </a>
         </div>
@@ -79,10 +76,10 @@
             <span class="glyphicon glyphicon-chevron-down module-button" id="module-button-4"></span>
         </h4>
         <div id="module-4" class="module-div">
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/LOG_JOB_HST" class="btn btn-primary btn-block button-odd-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/LOG_JOB_HST" class="btn btn-primary btn-block button-odd-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-bishop"></span> Job Order Log
             </a>
-            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/LOG_TRN_HST" class="btn btn-primary btn-block button-even-feinmetall" style="margin-top:5px;margin-right:5px;">
+            <a href="../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/LOG_TRN_HST" class="btn btn-primary btn-block button-even-custom" style="margin-top:5px;margin-right:5px;">
                 <span class="glyphicon glyphicon-bishop"></span> Training Log
             </a>
         </div>
