--- a/Aiwe/Views/Common/Create.cshtml
+++ b/Aiwe/Views/Common/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Aiwe.Models;
+@using Aiwe.Helpers;
 
 @model AiweCreateEditModel
 
@@ -6,20 +7,37 @@
   ViewBag.Title = Aibe.LCZ.W_Create;
   ViewBag.LabelClasses = "col-md-" + Model.CreateEditLabelPortion;
   ViewBag.EditorClass = "col-md-" + (12 - Model.CreateEditLabelPortion);
+  string additionalLabel = string.Empty;
+  string urlPars = string.Empty;
+  if (Model.Identifiers != null && Model.Identifiers.Count > 0) {
+    foreach (var identifier in Model.Identifiers) {
+      additionalLabel += ", " + identifier.Key + ": " + identifier.Value;
+    }
+    ViewBag.Title += additionalLabel;
+    urlPars = AiweTranslationHelper.GetIdentifiersUrl(Model.Identifiers);
+  }
 }
 
 <h2>@Model.TableDisplayName <small>(@ViewBag.Title)</small></h2>
 <br />
 
-@using (Html.BeginForm(Aibe.DH.CreateActionName, Aiwe.DH.MvcCommonControllerName, FormMethod.Post, new { id = "commonForm", enctype = "multipart/form-data" })) {
+@using (Html.BeginForm(Aibe.DH.CreateActionName,
+        Aiwe.DH.MvcCommonControllerName, FormMethod.Post,
+        new { id = "commonForm", enctype = "multipart/form-data" })) {
+  int iIndex = 0;
+  foreach (var identifier in Model.Identifiers) {
+    @Html.Hidden(Aiwe.DH.IdentifierKeyName + "[" + iIndex + "]", identifier.Key);
+    @Html.Hidden(Aiwe.DH.IdentifierValueName + "[" + iIndex + "]", identifier.Value);
+    ++iIndex;
+  }
   @Html.Partial("_CreateEditPart")
   <div class="row">
     <div class="form-group">
       <div class="@ViewBag.LabelClasses"></div>
-      <div class="btn btn-success col-md-1" style="margin-left:12px; margin-right:8px; margin-top:15px;" onclick="submitCommonForm()">
+      <div class="btn btn-success col-md-2" style="margin-left:12px; margin-right:8px; margin-top:15px;" onclick="submitCommonForm()">
         <span class="glyphicon glyphicon-plus"><font style="font-family:verdana;"> @Aibe.LCZ.W_Create</font></span>
       </div>
-      <a href="../../../../../../@Aiwe.DH.MvcCommonControllerName/@Aibe.DH.IndexActionName/@Model.TableName"
+      <a href="../../../../../../@Aiwe.DH.MvcCommonControllerName/@(Model.GroupDetailsOrigin ? Aibe.DH.GroupDetailsActionName : Aibe.DH.IndexActionName)/@(Model.TableName + (string.IsNullOrWhiteSpace(urlPars) ? string.Empty : "?" + urlPars))"
          class="btn btn-primary col-md-2"
          style="margin-left:12px; margin-top:15px;">
         <span class="glyphicon glyphicon-circle-arrow-left"><font style="font-family:verdana;"> @Aibe.LCZ.W_BackToList</font></span>
