--- a/Aiwe/Views/Common/_Filter.cshtml
+++ b/Aiwe/Views/Common/_Filter.cshtml
@@ -2,7 +2,7 @@
 @using System.Data;
 @using Aiwe.Helpers;
 
-@model Aiwe.Models.AiweFilterIndexModel
+@model Aiwe.Models.AiweBaseFilterIndexModel
 
 @{
   ViewBag.LabelClasses = "col-md-" + Model.FilterLabelPortion;
