--- a/Aiwe/Views/Common/_CreateEditGroupPart.cshtml
+++ b/Aiwe/Views/Common/_CreateEditGroupPart.cshtml
@@ -3,6 +3,7 @@
 @using Aibe.Models;
 @using Aiwe.Helpers;
 @using Aiwe.Models;
+@using Aiwe.Models.ViewModels;
 @using Aiwe.Extensions;
 @using System.Data;
 @using Extension.String;
@@ -27,11 +28,11 @@
     bool isDropDown = Model.Meta.IsCreateEditDropDownColumn(cn);
     bool isTextField = Model.Meta.IsTextField(cn);
 
-    string controlClasses = "form-control form-control-common-plus";
+    //string controlClasses = "form-control form-control-common-plus";
 
     if (groupByColumnInfo.IsAutoInt) {
       string dataValue = Model.GetData(cn);
-      <input type="hidden" name="@cn" class="@controlClasses" value="@dataValue" />
+      <input type="hidden" name="@cn" class="@Aiwe.DH.ControlClasses" value="@dataValue" />
       continue;
     }
 
@@ -41,8 +42,8 @@
       string dataDateValue = dataValueDt.HasValue ? dataValueDt.Value.ToString(Aibe.DH.DefaultDateFormat) : string.Empty;
       string dataTimeName = cn + Aibe.DH.CreateEditTimeAppendixName;
       string dataTimeValue = Model.GetTime(dataTimeName, dataValueDt);
-      <input type="hidden" name="@cn" class="@controlClasses" value="@dataDateValue" />
-      <input type="hidden" name="@dataTimeName" class="@controlClasses" value="@dataTimeValue" />
+      <input type="hidden" name="@cn" class="@Aiwe.DH.ControlClasses" value="@dataDateValue" />
+      <input type="hidden" name="@dataTimeName" class="@Aiwe.DH.ControlClasses" value="@dataTimeValue" />
       continue;
     }
 
@@ -56,14 +57,20 @@
         dataValue = prefix + dataValue + postfix;
       }
 
-      <div class="form-group">
-        <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(cn)</label>
-        <div class="@ViewBag.EditorClass">
-          @if (isDropDown) {
-            List<string> dropdowns = Model.Meta.GetStaticCreateEditDropDownFor(cn, dataValue, Aibe.DH.DropDownTextDataType);
-            if (dropdowns == null || dropdowns.Count <= 0) {
-              <input type="text" name="@cn" class="@controlClasses" value="@dataValue"/>
-            } else { //string dropdown case
+      if (isDropDown) {
+        List<string> dropdowns = Model.Meta.GetStaticCreateEditDropDownFor(cn, dataValue, Aibe.DH.DropDownTextDataType);
+        if (dropdowns == null || dropdowns.Count <= 0) {
+          <div class="form-group">
+            <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(cn)</label>
+            <div class="@ViewBag.EditorClass">
+              <input type="text" name="@cn" class="@Aiwe.DH.ControlClasses" value="@dataValue"/>
+              @Html.ValidationMessage(cn, new { @class = "text-danger" })
+            </div>
+          </div>
+        } else { //string dropdown case
+          <div class="form-group">
+            <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(cn)</label>
+            <div class="@ViewBag.EditorClass">
               <div id="live-dd-@cn" class="live-dd" commondatatype="@Aibe.DH.DropDownTextDataType">
                 @{ 
                   List<SelectListItem> dropdownItems = new List<SelectListItem> {
@@ -75,42 +82,71 @@
                     item.Selected = true;
                   }
                 }
-                @Html.DropDownList(cn, dropdownItems, new { @class = controlClasses + " common-column-dropdown",
+                @Html.DropDownList(cn, dropdownItems, new { @class = Aiwe.DH.ControlClasses + " common-column-dropdown",
                   id = "common-column-dropdown-" + cn })
                </div>
               <input type="text" class="common-column-dropdown-original" id="common-column-dropdown-original-@cn" value="@dataValue" hidden="hidden" />
-            }
-          } else if (isTextField) { //string, not column and not TextField
-            <textarea class="@controlClasses"
+              @Html.ValidationMessage(cn, new { @class = "text-danger" })
+            </div>
+          </div>
+        }
+      } else if (isTextField) { //string, not column and not TextField
+        <div class="form-group">
+          <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(cn)</label>
+          <div class="@ViewBag.EditorClass">
+            <textarea class="@Aiwe.DH.ControlClasses"
                       rows="@Model.Meta.GetTextFieldRowSize(cn)"                                                
                       name="@cn">@dataValue</textarea> //must be written this way and cannot be auto adjusted. Otherwise the dataValue will be put in the centre of the area (not in the beginning)
-          } 
-          else { //normal string
-            <input type="text" name="@cn" class="@controlClasses" value="@dataValue" />
-          }        
-        @Html.ValidationMessage(cn, new { @class = "text-danger" })
+            @Html.ValidationMessage(cn, new { @class = "text-danger" })
+          </div>
         </div>
-      </div>
+      } else { //normal string
+        <div class="form-group">
+          <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(cn)</label>
+          <div class="@ViewBag.EditorClass">
+            <input type="text" name="@cn" class="@Aiwe.DH.ControlClasses" value="@dataValue" />
+            @Html.ValidationMessage(cn, new { @class = "text-danger" })
+          </div>
+        </div>
+      }
+      Html.RenderPartial("_ForeignInfoCreateEditPart", new ForeignInfoViewModel {
+        ColumnName = cn, Value = dataValue,
+        PageName = Aibe.DH.CreateEditFilterPageName, DefaultDateTimeFormat = Aiwe.DH.DetailsDateTimeFormat,
+        LabelClasses = ViewBag.LabelClasses, EditorClasses = ViewBag.EditorClass,
+        BaseModel = Model,
+      });
       continue;
     } 
   
     if (Aibe.DH.NumberDataTypes.Contains(dataType)) { //Integer/UInt/Other numbers type
       string dataValue = Model.GetData(cn);                  
       if (Model.ActionType.EqualsIgnoreCase(Aibe.DH.CreateGroupActionName) && Model.Meta.IsAutoGenerated(cn)){
-        <input type="hidden" name="@cn" class="@controlClasses" value="@dataValue" />
+        <input type="hidden" name="@cn" class="@Aiwe.DH.ControlClasses" value="@dataValue" />
         continue;
       } 
 
-      <div class="form-group">
-        <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(cn)</label>
-        <div class="@ViewBag.EditorClass">
-          @if (!isDropDown) { //normal number, use input type = "number"
-            <input type="number" name="@cn" class="@controlClasses" value="@dataValue"/>
-          } else { //dropdown number
-            List<string> dropdowns = Model.Meta.GetStaticCreateEditDropDownFor(cn, dataValue);
-            if (dropdowns == null || dropdowns.Count <= 0) {
-              <input type="number" name="@cn" class="@controlClasses" value="@dataValue"/>
-            } else { //number dropdown case
+      if (!isDropDown) { //normal number, use input type = "number"
+        <div class="form-group">
+          <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(cn)</label>
+          <div class="@ViewBag.EditorClass">
+            <input type="number" name="@cn" class="@Aiwe.DH.ControlClasses" value="@dataValue"/>
+            @Html.ValidationMessage(cn, new { @class = "text-danger" })
+          </div>
+        </div>
+      } else { //dropdown number
+        List<string> dropdowns = Model.Meta.GetStaticCreateEditDropDownFor(cn, dataValue);
+        if (dropdowns == null || dropdowns.Count <= 0) {
+          <div class="form-group">
+            <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(cn)</label>
+            <div class="@ViewBag.EditorClass">
+              <input type="number" name="@cn" class="@Aiwe.DH.ControlClasses" value="@dataValue"/>
+              @Html.ValidationMessage(cn, new { @class = "text-danger" })
+            </div>
+          </div>
+        } else { //number dropdown case
+          <div class="form-group">
+            <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(cn)</label>
+            <div class="@ViewBag.EditorClass">
               <div id="live-dd-@cn" class="live-dd" commondatatype="@Aibe.DH.DropDownNumberDataType">
                 @{
                   List<SelectListItem> dropdownItems = new List<SelectListItem> {
@@ -122,15 +158,21 @@
                     item.Selected = true;
                   }
                 }
-                @Html.DropDownList(cn, dropdownItems, new { @class = controlClasses + " common-column-dropdown",
+                @Html.DropDownList(cn, dropdownItems, new { @class = Aiwe.DH.ControlClasses + " common-column-dropdown",
                   id = "common-column-dropdown-" + cn })
               </div>
               <input type="text" class="common-column-dropdown-original" id="common-column-dropdown-original-@cn" value="@dataValue" hidden="hidden" />
-            }
-          }
-        @Html.ValidationMessage(cn, new { @class = "text-danger" })
-        </div>
-      </div>      
+              @Html.ValidationMessage(cn, new { @class = "text-danger" })
+            </div>
+          </div>
+        }
+      }
+      Html.RenderPartial("_ForeignInfoCreateEditPart", new ForeignInfoViewModel {
+        ColumnName = cn, Value = dataValue,
+        PageName = Aibe.DH.CreateEditFilterPageName, DefaultDateTimeFormat = Aiwe.DH.DetailsDateTimeFormat,
+        LabelClasses = ViewBag.LabelClasses, EditorClasses = ViewBag.EditorClass,
+        BaseModel = Model,
+      });
       continue;
     }
                     
@@ -142,8 +184,8 @@
       string dataTimeValue = Model.GetTime(dataTimeName, dataValueDt);
 
       if (Model.Meta.IsTimeStampAppliedFor(cn, Model.ActionType)) { //if it is timestamp column for the particular column and action, don't use it
-        <input type="hidden" name="@cn" class="@controlClasses" value="@dataDateValue" />
-        <input type="hidden" name="@dataTimeName" class="@controlClasses" value="@dataTimeValue" />
+        <input type="hidden" name="@cn" class="@Aiwe.DH.ControlClasses" value="@dataDateValue" />
+        <input type="hidden" name="@dataTimeName" class="@Aiwe.DH.ControlClasses" value="@dataTimeValue" />
         continue;
       }
 
@@ -151,8 +193,8 @@
         <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(cn)</label>
         <div class="@ViewBag.EditorClass">
           <div class="row form-inline" style="margin-left:0px;">
-            <input type="date" name="@cn" class="@controlClasses" value="@dataDateValue"/>
-            <input type="time" step="1" name="@dataTimeName" class="@controlClasses" value="@dataTimeValue"/>
+            <input type="date" name="@cn" class="@Aiwe.DH.ControlClasses" value="@dataDateValue"/>
+            <input type="time" step="1" name="@dataTimeName" class="@Aiwe.DH.ControlClasses" value="@dataTimeValue"/>
           </div>
           @Html.ValidationMessage(cn, new { @class = "text-danger" })
           @Html.ValidationMessage(dataTimeName, new { @class = "text-danger" })
@@ -172,7 +214,7 @@
       <div class="form-group">
         <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(cn)</label>
         <div class="@ViewBag.EditorClass">          
-          @Html.DropDownList(cn, dropdownItems, new { @class = controlClasses })
+          @Html.DropDownList(cn, dropdownItems, new { @class = Aiwe.DH.ControlClasses })
           @Html.ValidationMessage(cn, new { @class = "text-danger" })
         </div>
       </div>      
@@ -182,5 +224,6 @@
     <p>Name: @Model.Meta.GetColumnDisplayName(cn), Type: @dataType</p>    
   }
   <div id="common-table-name" hidden>@Model.TableName</div>
+  <div id="is-first-load" hidden>True</div>
   @Html.ValidationMessage(Aibe.LCZ.I_UnknownColumn, new { @class = "text-danger" })
 </div>
