--- a/Aiwe/Views/Common/_DetailsPart.cshtml
+++ b/Aiwe/Views/Common/_DetailsPart.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Aiwe.Models;
+@using Aiwe.Models.ViewModels;
 @using Aibe.Helpers;
 @using Aibe.Models;
 @using Aibe.Models.Core;
@@ -74,8 +75,14 @@
           string dataValue = data.Value ?? string.Empty;
           @Html.Raw(Model.GetListColumnDetailsHTML(data.Key, dataValue));
         } else {
-          string dateTimeFormat = Model.Meta.GetCustomDateTimeFormatFor(data.Key, Aibe.DH.DetailsPageName);
-          <div class="@ViewBag.EditorClass">@DateTimeHelper.ProcessPossibleDateTimeString(data.Value, Model.Meta.IsDateTimeColumn(data.Key), dateTimeFormat ?? Aiwe.DH.DetailsDateTimeFormat)</div>
+          Html.RenderPartial("_ForeignInfoDetailsPart", new ForeignInfoViewModel() {
+            ColumnName = data.Key, Value = data.Value,
+            PageName = Aibe.DH.DetailsPageName, DefaultDateTimeFormat = Aiwe.DH.DetailsDateTimeFormat,
+            LabelClasses = ViewBag.LabelClasses, EditorClasses = ViewBag.EditorClass,
+            BaseModel = Model,
+          });
+          @*string dateTimeFormat = Model.Meta.GetCustomDateTimeFormatFor(data.Key, Aibe.DH.DetailsPageName);
+          <div class="@ViewBag.EditorClass">@DateTimeHelper.ProcessPossibleDateTimeString(data.Value, Model.Meta.IsDateTimeColumn(data.Key), dateTimeFormat ?? Aiwe.DH.DetailsDateTimeFormat)</div>*@
         }
 
       </div>
