--- a/Aiwe/Views/Common/_ForeignInfoDetailsPart.cshtml
+++ b/Aiwe/Views/Common/_ForeignInfoDetailsPart.cshtml
@@ -17,7 +17,8 @@
 
 @if (isForeignKey) {
   ForeignInfoColumnInfo info = Model.BaseModel.Meta.GetForeignInfoColumn(Model.ColumnName);
-  DataRow row = info.GetForeignData(Model.ColumnName, Model.Value);
+  //DataRow row = info.GetForeignData(Model.ColumnName, Model.Value);
+  DataRow row = info.GetForeignData(Model.Value);
   if (info.IsFullForeignInfo) {
     var columns = info.GetForeignFullColumns();
     foreach (DataColumn column in columns) {
@@ -29,10 +30,10 @@
       <div class="@(Model.EditorClasses + " common-foreign-info-value")">@usedValue</div>
     }
   } else {
-    foreach (var columnNamePair in info.RefColumnNamePairs) {
-      object rowValue = row == null ? null : row[columnNamePair.Key];
+    foreach (var columnNameTrio in info.RefColumnNameTrios) {
+      object rowValue = row == null ? null : row[columnNameTrio.Item1];
       //string usedColumnName = Aibe.DH.ForeignInfoPrefix + "-" + columnNamePair.Key + "-" + Model.ColumnName;
-      string displayName = columnNamePair.Value;
+      string displayName = columnNameTrio.Item2;
       string usedValue = rowValue == null ? string.Empty : rowValue.ToString();
       <div class="@(Model.LabelClasses + " common-foreign-info-label")"><b>@displayName</b></div>
       <div class="@(Model.EditorClasses + " common-foreign-info-value")">@usedValue</div>
